<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="-10dp"
    tools:layout_editor_absoluteY="16dp">


    <View
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="#43000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"

        android:text="@string/ou"
        android:textColor="#6B000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnection"
        app:layout_constraintVertical_bias="0.699" />

    <View
        android:id="@+id/view2"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="#43000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />






    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:text="@string/identifiez_vous"
        android:textColor="@color/couleurTextGris"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:ems="15"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mot_de_passe_oublie"
        android:textColor="@color/couleurTextBleu"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editPasseword"
        app:layout_constraintTop_toBottomOf="@+id/editPasseword" />

<!--    Partie Toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="34dp" />

    <ImageView
        android:id="@+id/buttonRetour"
        android:layout_width="33dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/baseline_arrow_back_24" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/connectez_vous"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/buttonRetour"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="@+id/imagePassword"

        app:layout_constraintStart_toStartOf="@+id/imagePassword"
        app:layout_constraintTop_toTopOf="@+id/editEmail"

        app:srcCompat="@drawable/baseline_attach_email_24" />


    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="46dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/editPasseword"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/editPasseword"
        app:srcCompat="@drawable/password_svgrepo_com" />

    <EditText
        android:id="@+id/editPasseword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:ems="15"
        android:hint="@string/mot_de_passe"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonConnection"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/buttoncolor"
        android:hint="@string/connectez_vous_maj"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"

        app:layout_constraintEnd_toEndOf="@+id/editPasseword"
        app:layout_constraintStart_toStartOf="@+id/imagePassword"
        app:layout_constraintTop_toBottomOf="@+id/editPasseword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnection"
        tools:layout_editor_absoluteX="35dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icons8_facebook"


            />

        <Button
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/continuer_avec_facebook"
            android:textColor="@color/couleurTextBleu"
            android:textSize="20sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/nouveau_sur_jumia"
        android:textColor="@color/couleurTextGris"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/textView9"

        app:layout_constraintTop_toTopOf="@+id/buttonInscription" />

    <TextView
        android:id="@+id/buttonInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/ceee_un_compte"
        android:textColor="@color/couleurTextBleu"
        android:textSize="17sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/view2"

        app:layout_constraintStart_toEndOf="@+id/textView9" />


</androidx.constraintlayout.widget.ConstraintLayout>