<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="34dp" />

    <ImageButton
        android:id="@+id/buttonRetour"
        android:layout_width="33dp"
        android:backgroundTint="#00FFFFFF"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/baseline_arrow_back_24" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/ceee_un_compte"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/buttonRetour"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creer_un_nouveau_compte"
        android:textColor="@color/couleurTextGris"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="47dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/user_3295" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/prenom"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        android:layout_marginLeft="5dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        />

    <EditText
        android:id="@+id/Nom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="15"
        android:hint="@string/nom"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="51dp"

        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress2"


        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress2"
        app:srcCompat="@drawable/baseline_attach_email_24" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/Nom"
        app:layout_constraintEnd_toEndOf="@+id/Nom"
        app:layout_constraintStart_toStartOf="@+id/Nom"

 />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="51dp"

        app:layout_constraintBottom_toBottomOf="@+id/sectionMotdepasse"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/sectionMotdepasse"
        app:srcCompat="@drawable/password_lock_icon" />

    <EditText
        android:id="@+id/sectionMotdepasse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress2"

        app:layout_goneMarginTop="50dp" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/spinnerNumTel"
        app:srcCompat="@drawable/phone_519" />

    <Spinner
        android:id="@+id/spinnerNumTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"

        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="@+id/sectionMotdepasse"
        app:layout_constraintTop_toBottomOf="@+id/sectionMotdepasse" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/couleurTextGris"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerNumTel"
        app:layout_constraintStart_toStartOf="@id/editTextNumber"
        app:layout_constraintEnd_toEndOf="@id/editTextNumber"


        />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/couleurTextGris"
        app:layout_constraintTop_toBottomOf="@id/spinnerNumTel"
        app:layout_constraintStart_toStartOf="@id/spinnerNumTel"
        app:layout_constraintEnd_toEndOf="@id/spinnerNumTel"

        />


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:layout_marginStart="15dp"
        android:inputType="number"

        app:layout_constraintBottom_toTopOf="@+id/view"

        app:layout_constraintEnd_toEndOf="@id/sectionMotdepasse"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/spinnerNumTel" />



    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/buttoncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        android:layout_marginBottom="25dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
